fix: Fixed the voting icon overlap issue

--- a/src/modules/Album/album.scss
+++ b/src/modules/Album/album.scss
@@ -1,5 +1,5 @@
 .albumWrapper {
     max-width: 960px;
     margin: 1rem auto;
-
+    padding: 2rem;
 }
